# simulakrum

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: mock_manager.hpp  simulakrum.hpp  vk_function_observer.hpp
include/simulakrum/: c_array.hpp  mock_manager.hpp  simulakrum.hpp  vk_function_impl.hpp  vk_function_info.hpp
scripts/: gen_from_xml.py
src/default/: vkEnumerateDeviceExtensionProperties_default.cpp  vkEnumerateDeviceLayerProperties_default.cpp  vkEnumerateInstanceExtensionProperties_default.cpp  vkEnumerateInstanceLayerProperties_default.cpp  vkEnumerateInstanceVersion_default.cpp
test/: CMakeLists.txt
test/examples/: CMakeLists.txt
test/examples/00-basic/: CMakeLists.txt  get_version.cpp  get_version.hpp  main.cpp
